<resources>
    <string name="app_name">Scotts Layout Example</string>
    <string name="instructions">Here I have created some examples of layouts.  Go to the layout folder res>layout and select the layout example you want to see.</string>

    <string name="imageDescription">Image of person</string>

    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>

    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>

    <string name="textview1">Text View 1</string>
    <string name="textview2">Text View 2</string>
    <string name="textview3">Text View 3</string>

    <string name="textview4">Text View 4</string>
    <string name="textview5">Text View 5</string>

   <string name="txtView" >Hello Class</string>
    <string name="btn1">Button 1</string>

    <string name="chainBtn1">ChBtn1</string>
    <string name="chainBtn2">ChBtn2</string>
    <string name="chainBtn3">ChBtn3</string>


    <string name="flowbutton1">Flow Btn 1</string>
    <string name="flowbutton2">Flow Btn 2</string>
    <string name="flowbutton3">Flow Btn 3</string>
    <string name="flowbutton4">Flow Btn 4</string>
    <string name="flowbutton5">Flow Btn 5</string>

    <string name="sampTextView">Hello Class</string>
    <string name="sampBtn">Button 1</string>
    <string name="editTextName">Some name here</string>


</resources>