<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/flowbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flowbutton1"/>

    <Button
        android:id="@+id/flowbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flowbutton2" />

    <Button
        android:id="@+id/flowbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flowbutton3" />

    <Button
        android:id="@+id/flowbutton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flowbutton4" />

    <Button
        android:id="@+id/flowbutton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flowbutton5" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:flow_wrapMode="chain"
        app:flow_maxElementsWrap="3"
        app:flow_firstHorizontalStyle="packed"
        app:flow_lastHorizontalStyle="spread_inside"
        app:constraint_referenced_ids="flowbutton1,flowbutton2,flowbutton3,flowbutton4,flowbutton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Good video on flows https://www.youtube.com/watch?v=tZVjF8zVGx0  -->

</androidx.constraintlayout.widget.ConstraintLayout>